--- a/ceaser/home/templates/index.html
+++ b/ceaser/home/templates/index.html
@@ -1,4 +1,9 @@
 <html>
-<p>ceaser cipher!</p>
+<h4>ceaser cipher!</h4>
+<form method="POST">
+{{form.as_p}}
+<input type="submit" value="cipher">	
+</form>
+<h3>{{result}}</h3>
 
 </html>
